Fix header overlap to sections on anchor-scroll

--- a/src/styles.css
+++ b/src/styles.css
@@ -42,6 +42,9 @@ header {
   background-color: var(--color-bg-1);
   z-index: 3;
 }
+section {
+  scroll-margin-top: 72px;
+}
 
 .container {
   width: 100%;
@@ -204,6 +207,9 @@ select,
   }
   header .container {
     padding-top: 32px;
+  }
+  section {
+    scroll-margin-top: 80px;
   }
   .login {
     display: block;
